// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 100px;
  background-color: #4f0599;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
